# embodied-agent-demo

./: .gitattributes  .gitignore  EVAL_PREREG.md  PLAN.md  README.md  README_EN.md  RESULTS.md  REVIEW.md  faults.yaml  prereg.yaml  requirements.txt  run_demo.py  run_eval.py
docs/: ADAPTER_CONTRACT.md  API.md  GLOSSARY.md  PHASE_B_DESIGN.md  POSITIONING.md  PRODUCT.md  RECOVERY_OWNERSHIP.md  TESTCASES.md  USER_MANUAL.md
embodied_agent/: __init__.py  adapter.py  clock.py  events.py  faults.py  geofence.py  graph.py  hitl.py  intent.py  llm_intent.py  memory.py  mock_server.py  planner_rules.py  recovery.py  registry.py  replay.py  runtime.py  safety.py  world.py
phase_b/: Dockerfile  Dockerfile.orch  FINDINGS.md  README.md  diag.sh  diag2.sh  diag3.sh  diag4.sh  gen_world.py  make_blocked_mask.py  nav2_params.yaml  rclpy_adapter.py  real_mission_events.jsonl  real_runtime.py  run_real_mission.py  smoke_bt_check.sh  smoke_day1.py  smoke_day1.sh  smoke_day2.py  smoke_day2.sh  smoke_day2c.py  smoke_day2c.sh  smoke_day3a.py  smoke_day3a.sh  smoke_day3b.py  smoke_day3b.sh  smoke_day3b2.py  smoke_day3c.sh  smoke_day3d.py  smoke_day3d.sh  smoke_day4.sh  smoke_transit_guard.py
phase_c/: PHASE_C_RESULTS.md  real_metrics.py  run_real_eval.py  smoke_phase_c.sh
phase_d/: PHASE_D_RESULTS.md  README.md  action_types.py  composite_mission.py  demo.py  mock_vla_policy.py  policy_contract.py  run_composite_eval.py  safety_shield.py  skill_server.py  (+10 more)
phase_d/ros2/vla_skill_interfaces/: CMakeLists.txt  package.xml
phase_d/ros2/vla_skill_interfaces/action/: ExecuteVLASkill.action
(+160 files in other folders)
